--- a/.github/workflows/reusable-docker.yml
+++ b/.github/workflows/reusable-docker.yml
@@ -24,10 +24,10 @@ on:
         type: string
         default: ${{ github.event.pull_request.head.sha }}
     secrets:
-      username:
+      DOCKER_PASSWORD:
         description: "Docker registry username"
         required: true
-      password:
+      DOCKER_USERNAME:
         description: "Docker registry password"
         required: true
 
@@ -152,8 +152,8 @@ jobs:
         uses: docker/login-action@v2.1.0
         with:
           registry: ${{ inputs.registry }}
-          username: ${{ secrets.username }}
-          password: ${{ secrets.password }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: package.json update version
         run: |
@@ -241,8 +241,8 @@ jobs:
         uses: docker/login-action@v2.1.0
         with:
           registry: ${{ inputs.registry }}
-          username: ${{ secrets.username }}
-          password: ${{ secrets.password }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Create extra-images list
         id: extra-images
