--- a/.github/workflows/reusable-docker.yml
+++ b/.github/workflows/reusable-docker.yml
@@ -10,7 +10,7 @@ on:
       platforms:
         description: Docker platforms
         type: string
-        default: linux/amd64,linux/arm64,linux/arm/v7
+        default: linux/amd64,linux/arm64
       targets:
         description: Docker targets
         required: true
